clusters/homelab/apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    haproxy-ingress.github.io/secure-backends: "true"
    haproxy-ingress.github.io/secure-verify-ca-secret: client-ca-secret/ca
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/proxy-body-size: "10g"
    haproxy-ingress.github.io/timeout-server: "3600s"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - nextcloud.daddyshome.fr
    - drive.daddyshome.fr
    secretName: nextcloud-tls
  rules:
  - host: nextcloud.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  - host: drive.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
