clusters/homelab/apps/nextcloud/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud-https
  namespace: nextcloud
spec:
  hosts:
  - nextcloud.daddyshome.fr
  - xdrive.daddyshome.fr
  gateways:
  - nextcloud-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: nextcloud
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud-redirect
  namespace: nextcloud
spec:
  hosts:
  - nextcloud.daddyshome.fr
  - xdrive.daddyshome.fr
  gateways:
  - nextcloud-gateway
  http:
  - match:
    - port: 80
    redirect:
      uri: https://xdrive.daddyshome.fr
      redirectCode: 301
---
# Mobile access virtual services
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud-mobile-https
  namespace: nextcloud
spec:
  hosts:
  - xdrive-mobile.daddyshome.fr
  gateways:
  - nextcloud-mobile-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: nextcloud
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud-mobile-redirect
  namespace: nextcloud
spec:
  hosts:
  - xdrive-mobile.daddyshome.fr
  gateways:
  - nextcloud-mobile-gateway
  http:
  - match:
    - port: 80
    redirect:
      uri: https://xdrive-mobile.daddyshome.fr
      redirectCode: 301
